tests/baselines/reference/privateNamesAndStaticMethods.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(2,12): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(3,18): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(4,19): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(7,5): error TS18019: 'static' modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(8,16): error TS18023: An accessor cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(11,16): error TS18023: An accessor cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(24,12): error TS18022: A method cannot be named with a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts (7 errors) ====
    class A {
        static #foo(a: number) {}
               ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        static async #bar(a: number) {}
                     ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        static async *#baz(a: number) {
                      ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
            return 3;
        }
        static #_quux: number;
        ~~~~~~
!!! error TS18019: 'static' modifier cannot be used with a private identifier.
        static get #quux (): number {
                   ~~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
            return this.#_quux;
        }
        static set #quux (val: number) {
                   ~~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
            this.#_quux = val; 
        }
        constructor () {
            A.#foo(30);
            A.#bar(30);
            A.#bar(30);
            A.#quux = A.#quux + 1;
            A.#quux++;
     }
    }
    
    class B extends A {
        static #foo(a: string) {}
               ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        constructor () {
            super();
            B.#foo("str");
        }
    }
    